adição da lista de playlist
